# str_utils

./: CMakeLists.txt  LICENSE  README.md
include/str_utils/: str_split.h  str_starts_ends_with.h  str_to_int.h
sources/: str_split.c  str_starts_ends_with.c  str_to_int.c
tests/: CMakeLists.txt  main.c
